# work

./: CMakeLists.txt  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glfw/: CMakeLists.txt
glfw/src/: glad.c
glfw/tests/: cursor.c  events.c  gamma.c  glfwinfo.c  inputlag.c  joysticks.c  opacity.c  windows.c
glm/glm/gtc/: swizzle.hpp
include/: Camera.cpp  Camera.h  LiteMath.h  ShaderProgram.cpp  ShaderProgram.h  diamond_square.h  landscape.h  main.cpp  seaplane.h  skybox.h
shaders/: fragment.glsl  sea_fragment.glsl  skybox_vertex.glsl
src/: main.cpp
stb/: CMakeLists.txt
textures/skybox/2/: bottom.tga  top.tga
